--- a/style.css
+++ b/style.css
@@ -1,7 +1,25 @@
+border-style
 .MainPrime{
-    background-color: lightgreen;
+    padding: 100%;
+    background-color: green;
 }
 
-.inputsec{
-    background-color: gray;
+body{
+    margin-top: 2%;
+    background-color: lightyellow;
+    border-style: outset;
+    border-color: darkslategrey;
 }
+.MainSecond{
+    padding: 1%;
+    background-color: slategray;
+}
+.inputsec{
+    margin: auto;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    width: 10%;
+    background-color: darkslategrey;
+    text-align: center;
+}
+
