--- a/style.css
+++ b/style.css
@@ -31,14 +31,15 @@ body{
     background-color: greenyellow;
 }
 
+
 #mantis{
-    background-color: tan;
+    background-color: mediumseagreen;
 }
 
 #hopper{
-    background-color: tan;
+    background-color: mediumslateblue;
 }
 
 #beetle{
-    background-color: tan;
+    background-color: mediumturquoise;
 }
